# cmake_simple_demo

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  simple_demo.cpp
